fixed missing stretched avatar

--- a/resources/assets/sass/pages/plan/_ideas.scss
+++ b/resources/assets/sass/pages/plan/_ideas.scss
@@ -46,6 +46,7 @@
 }
 
 ul#ideas-collaborator-list {
+
   li {
     display: block;
     width: 100%;
@@ -59,15 +60,24 @@ ul#ideas-collaborator-list {
       margin-left: 5px;
     }
 
-    img {
-      width: 30px;
+    .profile-image-wrapper {
       display: inline-block;
+      width: 30px;
+      height: 30px;
       border-radius: 50%;
+      overflow: hidden;
+      text-align: center;
     }
 
-    p{
+    img {
+      width: 30px;
+    }
+
+    p {
       display: inline-block;
       padding-left: 5px;
+      position: relative;
+      top: -13px;
     }
   }
 }
